fixed stash geenration